PROJECT(COMP590Test)
cmake_minimum_required(VERSION 2.6)

ADD_SUBDIRECTORY(gtest)
INCLUDE_DIRECTORIES(${COMP590Test_SOURCE_DIR}/gtest/include)

ENABLE_TESTING()

SET(TESTS
  pa1
)

FOREACH(TEST ${TESTS})

  ADD_SUBDIRECTORY(${TEST})

  INCLUDE_DIRECTORIES(${COMP590Test_SOURCE_DIR}/../${TEST})

  SET(TEST_NAME Test${TEST})
  SET(TEST_MODULE ${TEST}/${TEST_NAME}.cpp)
  ADD_EXECUTABLE(${TEST_NAME} ${TEST_MODULE})
  TARGET_LINK_LIBRARIES(${TEST_NAME} gtest_main)
  TARGET_LINK_LIBRARIES(${TEST_NAME} ${TEST})

  ADD_TEST(${TEST} ${TEST_NAME})
ENDFOREACH()

